--- a/voom-fe/package.json
+++ b/voom-fe/package.json
@@ -34,7 +34,10 @@
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.10",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/leaflet-routing-machine": "^3.2.9",
     "express": "^5.1.0",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.17",
@@ -47,6 +50,7 @@
     "@angular/compiler-cli": "^20.3.0",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20.17.19",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
