--- a/voom-service/src/main/resources/application.properties
+++ b/voom-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=voom-service
+
+spring.autoconfigure.exclude=\
+org.springframework.boot.autoconfigure.data.jpa.JpaRepositoriesAutoConfiguration,\
+org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
