--- a/voom-fe/package.json
+++ b/voom-fe/package.json
@@ -35,9 +35,11 @@
     "@angular/ssr": "^20.3.10",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/leaflet-routing-machine": "^3.2.9",
+    "apexcharts": "^5.3.6",
     "express": "^5.1.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+    "ng-apexcharts": "^2.0.4",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.17",
