--- a/voom-service/pom.xml
+++ b/voom-service/pom.xml
@@ -104,7 +104,12 @@
 			<version>0.13.0</version>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
