feat: Conected user profile page to endpoints.

--- a/voom-service/src/main/resources/application.properties
+++ b/voom-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=voom-service
 
 # Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/voom
 spring.datasource.username=postgres
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
