--- a/voom-fe/package.json
+++ b/voom-fe/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.10",
+    "@stomp/stompjs": "^7.2.1",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/leaflet-routing-machine": "^3.2.9",
     "apexcharts": "^5.3.6",
