--- a/voom-service/src/main/resources/application.properties
+++ b/voom-service/src/main/resources/application.properties
@@ -34,3 +34,5 @@ logging.level.org.springframework.security=TRACE
 logging.level.org.springframework.security.web.FilterChainProxy=TRACE
 logging.level.org.springframework.security.web.access.intercept=TRACE
 logging.level.org.springframework.security.authentication=TRACE
+logging.level.org.springframework.web.servlet.mvc.method.annotation.ServletInvocableHandlerMethod=TRACE
+logging.level.com.fasterxml.jackson=TRACE
