--- a/voom-app/app/src/main/AndroidManifest.xml
+++ b/voom-app/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
 
     <application
+        android:name=".VoomApplication"
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
