--- a/voom-fe/package.json
+++ b/voom-fe/package.json
@@ -37,11 +37,13 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@types/leaflet-routing-machine": "^3.2.9",
     "apexcharts": "^5.3.6",
+    "chart.js": "^4.5.1",
     "express": "^5.1.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "ng-apexcharts": "^2.0.4",
+    "ng2-charts": "^8.0.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.17",
