--- a/voom-app/app/src/main/AndroidManifest.xml
+++ b/voom-app/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:theme="@style/Theme.VoomApp">
         <activity
             android:name=".MainActivity"
+            android:launchMode="singleTask"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -41,6 +42,25 @@
                     android:host="vehicle-requests"
                     android:pathPattern="/.*"/>
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="voom"
+                    android:host="reset-password" />
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="voom"
+                    android:host="verify-email" />
+            </intent-filter>
+
         </activity>
     </application>
 
