--- a/voom-app/app/src/main/AndroidManifest.xml
+++ b/voom-app/app/src/main/AndroidManifest.xml
@@ -61,6 +61,17 @@
                     android:host="verify-email" />
             </intent-filter>
 
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="voom"
+                    android:host="activate" />
+            </intent-filter>
+
         </activity>
     </application>
 
