--- a/voom-app/app/src/main/AndroidManifest.xml
+++ b/voom-app/app/src/main/AndroidManifest.xml
@@ -71,6 +71,13 @@
                     android:host="activate" />
             </intent-filter>
 
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="voom" android:host="ride-tracking"/>
+            </intent-filter>
+
         </activity>
     </application>
 
